[gd_scene load_steps=2 format=3 uid="uid://douiiyuinttg8"]

[ext_resource type="Script" uid="uid://bnup8i2uxy7dn" path="res://preset_config_tab.gd" id="1_6h5ol"]

[node name="PresetConfigTab" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_6h5ol")

[node name="MarginContainer2" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer2"]
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer2/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer2/VBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer2/VBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
text = "Select preset to edit"

[node name="SelectPresetOptionButton" type="OptionButton" parent="MarginContainer2/VBoxContainer/VBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer2/VBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="CreateNewPresetButton" type="Button" parent="MarginContainer2/VBoxContainer/VBoxContainer2/HBoxContainer3"]
layout_mode = 2
text = "Create new"

[node name="DeletePresetButton" type="Button" parent="MarginContainer2/VBoxContainer/VBoxContainer2/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
text = "Delete selected"

[node name="SavePresetButton" type="Button" parent="MarginContainer2/VBoxContainer/VBoxContainer2/HBoxContainer3"]
layout_mode = 2
text = "Save presets"

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer2/VBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer2/VBoxContainer/VBoxContainer2/HBoxContainer2"]
layout_mode = 2
text = "Preset name"

[node name="PresetNameLineEdit" type="LineEdit" parent="MarginContainer2/VBoxContainer/VBoxContainer2/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
select_all_on_focus = true

[node name="HSeparator" type="HSeparator" parent="MarginContainer2/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer2/VBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="MarginContainer2/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Voice configuration"

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer2/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer2/VBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "TTS provider"

[node name="TTSProviderOptionButton" type="OptionButton" parent="MarginContainer2/VBoxContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
selected = 0
item_count = 2
popup/item_0/text = "gtts"
popup/item_0/id = 0
popup/item_1/text = "edge-tts"
popup/item_1/id = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer2/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer2/VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Selected voice:"

[node name="SelectedVoiceLabel" type="Label" parent="MarginContainer2/VBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "None"

[node name="HBoxContainer4" type="HBoxContainer" parent="MarginContainer2/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer2/VBoxContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
text = "Search"

[node name="VoiceLanguageLineEdit" type="LineEdit" parent="MarginContainer2/VBoxContainer/VBoxContainer/HBoxContainer4"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="VoiceLanguageItemList" type="ItemList" parent="MarginContainer2/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
item_count = 5
item_0/text = "element1"
item_1/text = "two"
item_2/text = "3"
item_3/text = "Four"
item_4/text = "Cinco"

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer2/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer2/VBoxContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "Slow"

[node name="SlowCheckButton" type="CheckButton" parent="MarginContainer2/VBoxContainer/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2

[node name="Label2" type="Label" parent="MarginContainer2/VBoxContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "(only works with gtts)"

[node name="Label3" type="Label" parent="MarginContainer2/VBoxContainer/VBoxContainer"]
visible = false
layout_mode = 2
text = "Voice distortions"

[node name="HSeparator2" type="HSeparator" parent="MarginContainer2/VBoxContainer"]
visible = false
layout_mode = 2

[node name="VBoxContainer3" type="VBoxContainer" parent="MarginContainer2/VBoxContainer"]
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer2/VBoxContainer/VBoxContainer3"]
layout_mode = 2
text = "Subtitles"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer2/VBoxContainer/VBoxContainer3"]
layout_mode = 2

[node name="Label2" type="Label" parent="MarginContainer2/VBoxContainer/VBoxContainer3/HBoxContainer"]
layout_mode = 2
text = "Subtitle color"

[node name="ColorPickerButton" type="ColorPickerButton" parent="MarginContainer2/VBoxContainer/VBoxContainer3/HBoxContainer"]
layout_mode = 2

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer2/VBoxContainer/VBoxContainer3"]
layout_mode = 2

[node name="Label2" type="Label" parent="MarginContainer2/VBoxContainer/VBoxContainer3/HBoxContainer3"]
layout_mode = 2
text = "Subtitle font"

[node name="LineEdit" type="LineEdit" parent="MarginContainer2/VBoxContainer/VBoxContainer3/HBoxContainer3"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer2/VBoxContainer/VBoxContainer3"]
layout_mode = 2

[node name="Label3" type="Label" parent="MarginContainer2/VBoxContainer/VBoxContainer3/HBoxContainer2"]
layout_mode = 2
text = "Subtitle size"

[node name="LineEdit" type="LineEdit" parent="MarginContainer2/VBoxContainer/VBoxContainer3/HBoxContainer2"]
layout_mode = 2

[connection signal="item_selected" from="MarginContainer2/VBoxContainer/VBoxContainer2/HBoxContainer/SelectPresetOptionButton" to="." method="_on_select_preset_option_button_item_selected"]
[connection signal="pressed" from="MarginContainer2/VBoxContainer/VBoxContainer2/HBoxContainer3/CreateNewPresetButton" to="." method="_on_create_new_preset_button_pressed"]
[connection signal="pressed" from="MarginContainer2/VBoxContainer/VBoxContainer2/HBoxContainer3/DeletePresetButton" to="." method="_on_delete_preset_button_pressed"]
[connection signal="pressed" from="MarginContainer2/VBoxContainer/VBoxContainer2/HBoxContainer3/SavePresetButton" to="." method="_on_save_preset_button_pressed"]
[connection signal="text_changed" from="MarginContainer2/VBoxContainer/VBoxContainer2/HBoxContainer2/PresetNameLineEdit" to="." method="_on_preset_name_line_edit_text_changed"]
[connection signal="item_selected" from="MarginContainer2/VBoxContainer/VBoxContainer/HBoxContainer2/TTSProviderOptionButton" to="." method="_on_tts_provider_option_button_item_selected"]
[connection signal="text_changed" from="MarginContainer2/VBoxContainer/VBoxContainer/HBoxContainer4/VoiceLanguageLineEdit" to="." method="_on_voice_language_line_edit_text_changed"]
[connection signal="item_selected" from="MarginContainer2/VBoxContainer/VBoxContainer/VoiceLanguageItemList" to="." method="_on_voice_language_item_list_item_selected"]
[connection signal="pressed" from="MarginContainer2/VBoxContainer/VBoxContainer/HBoxContainer3/SlowCheckButton" to="." method="_on_slow_check_button_pressed"]
